# repoclip

./: .gitignore  README.md  pyproject.toml
src/repoclip/: __init__.py  repoclip.py
src/repoclip/utils/: __init__.py  clipboard.py
